<package format="2">
    <version>0.0.0</version>
    <name>complex_test</name>
    <description>complex_test</description>
    <maintainer email="renyunfan@outlook.com">Yunfan Ren</maintainer>
    <license>BSD</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>my_math_lib</depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
